@@ -8,7 +8,7 @@ for a in 12345 12346 ; do
    ./make_sandbox $a
 done
 
-sleep 5;
+sleep 3;
 /tmp/12346/use -e "change master to master_host='127.0.0.1', master_log_file='mysql-bin.000001', master_log_pos=0, master_user='msandbox', master_password='msandbox', master_port=12345"
 /tmp/12346/use -e "start slave"
 /tmp/12345/use -e "change master to master_host='127.0.0.1', master_log_file='mysql-bin.000001', master_log_pos=0, master_user='msandbox', master_password='msandbox', master_port=12346"
