@@ -2,8 +2,8 @@
 
 use strict;
 use warnings FATAL => 'all';
-
-use Test::More tests => 18;
+use English qw(-no_match_vars);
+use Test::More tests => 22;
 use DBI;
 
 my $output;
@@ -29,7 +29,7 @@ $dbh = DBI->connect(
    "DBI:mysql:;host=127.0.0.1;port=12345", 'msandbox', 'msandbox',
    { PrintError => 0, RaiseError => 1 });
 
-`/tmp/12345/use < before.sql`;
+`/tmp/12345/use < samples/before.sql`;
 
 $output = run('test1', 'test2', '');
 like($output, qr/Can't make changes/, 'It dislikes changing a slave');
@@ -45,7 +45,7 @@ is_deeply(
    'Synced OK with no alg'
 );
 
-`/tmp/12345/use < before.sql`;
+`/tmp/12345/use < samples/before.sql`;
 
 $output = run('test1', 'test2', '-a Stream --skipbinlog');
 is($output, "INSERT INTO `test`.`test2`(`a`, `b`) VALUES (1, 'en');
@@ -57,7 +57,7 @@ is_deeply(
    'Synced OK with Stream'
 );
 
-`/tmp/12345/use < before.sql`;
+`/tmp/12345/use < samples/before.sql`;
 
 $output = run('test1', 'test2', '-a GroupBy --skipbinlog');
 is($output, "INSERT INTO `test`.`test2`(`a`, `b`) VALUES (1, 'en');
@@ -69,7 +69,7 @@ is_deeply(
    'Synced OK with GroupBy'
 );
 
-`/tmp/12345/use < before.sql`;
+`/tmp/12345/use < samples/before.sql`;
 
 $output = run('test1', 'test2', '-a Chunk --skipbinlog');
 is($output, "INSERT INTO `test`.`test2`(`a`, `b`) VALUES (1, 'en');
@@ -81,7 +81,7 @@ is_deeply(
    'Synced OK with Chunk'
 );
 
-`/tmp/12345/use < before.sql`;
+`/tmp/12345/use < samples/before.sql`;
 
 $output = run('test1', 'test2', '-a Nibble --skipbinlog');
 is($output, "INSERT INTO `test`.`test2`(`a`, `b`) VALUES (1, 'en');
@@ -93,7 +93,7 @@ is_deeply(
    'Synced OK with Nibble'
 );
 
-`/tmp/12345/use < before.sql`;
+`/tmp/12345/use < samples/before.sql`;
 
 $ENV{MKDEBUG} = 1;
 $output = run('test1', 'test2', '-a Nibble --skipbinlog --chunksize 1 --transaction -k 1');
@@ -136,7 +136,7 @@ $output = run('test3', 'test4', '--algorithm Nibble --chunksize 1k --print --ver
 ok($output, 'Synced with Nibble and data-size chunksize');
 
 # Ensure that syncing master-master works OK
-`/tmp/12345/use < before.sql`;
+`/tmp/12345/use < samples/before.sql`;
 # Make slave different from master
 `/tmp/12346/use -e 'set sql_log_bin=0;update test.test1 set b=2 where a = 1'`;
 # This will make 12345's data match the changed data on 12346 (that is not a
@@ -150,3 +150,19 @@ is_deeply(query('select * from test.test1'),
    'Master-master sync worked'
 );
 
+# Issue 37: mk-table-sync should warn about triggers
+`/tmp/12345/use < samples/issue_37.sql`;
+$output = `../mk-table-sync --skipslavecheck --execute u=msandbox,p=msandbox,h=127.0.0.1,P=12345,D=test,t=issue_37 h=127.1,P=12346 2>&1`;
+like($output, qr/Cannot write to table with triggers/, 'Cannot write to tbl with trigger without --ignore-triggers (issue 37)');
+
+$output = `/tmp/12346/use -D test -e 'SELECT * FROM issue_37'`;
+ok(!$output, 'Table with trigger was not written');
+
+$output = `../mk-table-sync --skipslavecheck --execute u=msandbox,p=msandbox,h=127.0.0.1,P=12345,D=test,t=issue_37 h=127.1,P=12346 --ignore-triggers 2>&1`;
+unlike($output, qr/Cannot write to table with triggers/, 'Writes to tbl with trigger with --ignore-triggers (issue 37)');
+
+$output = `/tmp/12346/use -D test -e 'SELECT * FROM issue_37'`;
+like($output, qr/a.+1.+2/ms, 'Table with trigger was written');
+
+diag(`../../sandbox/stop_all`);
+exit;
